# accord

./: README.md  docker-compose.yml  startup.sh
Inventory-service/: .gitignore  InventoryService.csproj  InventoryService.sln  README.md  Startup.cs
Inventory-service/Controllers/: InventoryController.cs
Inventory-service/Interfaces/: IInventoryServices.cs
Inventory-service/Migrations/: 20211029213049_initial.Designer.cs  20211029213049_initial.cs  20211120220508_Initial.Designer.cs  20211120220508_Initial.cs  InventoryContextModelSnapshot.cs
Inventory-service/Models/: InventoryContext.cs  Trinket.cs  UserInventory.cs
Inventory-service/Properties/: launchSettings.json
Inventory-service/Services/: InventoriesServices.cs
Inventory-service/Utils/: HealthzCheck.cs
accord_front/: README.md  pubspec.yaml
accord_front/lib/: main.dart
accord_front/web/: manifest.json
admin-portal/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-portal/src/: hooks.ts
api-gateway/: Dockerfile  deno.json  go.mod  go.sum  main.go  server.go  server.ts
api-gateway/common/: Logger.ts  Timing.ts
api-gateway/config/: development.json
api-gateway/handlers/: roomHandler.go  userHandler.go
api-gateway/routes/: auth.ts  router.ts
api-gateway/static/: index.html
auth-service/: Cargo.toml  Dockerfile  README.md
auth-service/config/: default.json  docker-integration.json  production.json
auth-service/src/: main.rs
auth-service/src/models/: errors.rs  mod.rs  users.rs
auth-service/src/routes/: login.rs  register.rs  router.rs
auth-service/src/utils/: builderHelper.rs  builder_helper.rs  context.rs  database.rs  errors.rs  logger.rs  mod.rs  settings.rs
chat-service/: .gitignore  DBAcessContext.cs  DataSeeder.cs  Dockerfile  Program.cs  appsettings.json  certificate.json  chat-service.csproj  chat-service.sln  denon.config.ts
chat-service/Controllers/: MessageController.cs  RoomController.cs  UserController.cs
chat-service/DataAccess/: DBAcessContext.cs  RoomDbContext.cs
chat-service/Hubs/: ChatHub.cs
chat-service/Interfaces/: IMessageService.cs  IRoomService.cs
chat-service/Migrations/: 20231123215144_init.Designer.cs  20231123215144_init.cs  RoomDataContextModelSnapshot.cs
chat-service/Models/: MessageModel.cs  NewMessageModel.cs
chat-service/Properties/: launchSettings.json
chat-service/Services/: MessageService.cs  RoomService.cs  UserService.cs
chat-service/src/: ws-server.ts
discord-clone/: docker-compose.yml
discord-clone/client/: package.json
discord-clone/server/: package.json
lfg_front/: README.md  pubspec.yaml
lfg_front/lib/: main.dart
lfg_front/test/: widget_test.dart
lfg_front/web/: index.html
lfg_front/windows/: CMakeLists.txt
mongodb/: mongo-init.js
nginx/: nginx.conf
room-service/: README.md  mapping.drawio  nest-cli.json  ormconfig.json  package-lock.json  package.json  tsconfig.json
room-service/src/: main.ts  (+1 more)
(+90 files in other folders)
