[package]
name = "auth-service"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mongo startup
# docker-compose up --build -d mongodb 

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.12", features = ["full"] }
bytes = "1.1"
futures = "0.3"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = { version = "2.0", default-features = true, features = ["bson-uuid-0_8", "bson-chrono-0_4"] }
bson = "2.0"
# find replacment or fork?
jsonwebtoken = "7"