[package]
name = "auth-service"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mongo startup
# docker-compose up --build -d mongodb 

[dependencies]
config = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
axum = { version = "0.5.1", features = ["headers"] }
thiserror = "1.0.30"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
tower-http = { version = "0.2.5", features = ["trace", "compression-br", "propagate-header", "sensitive-headers"] }
http = "0.2.6"
chrono = "0.4.19"
async-trait = "0.1.53"
once_cell = "1.10.0"
bcrypt = "0.12.1"
validator = { version = "0.14.0", features = ["derive"] }
bytes = "1.1"
futures = "0.3"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = { version = "2.0", default-features = true, features = ["bson-uuid-0_8", "bson-chrono-0_4"] }
bson = "2.0"
# find replacment or fork?
jsonwebtoken = "8"