[package]
name = "auth-service"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mongo startup
# docker-compose up --build -d mongodb 

[dependencies]
config = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.19", features = ["full"] }
axum = { version = "0.5", features = ["headers"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.2", features = ["trace", "compression-br", "propagate-header", "sensitive-headers"] }
http = "0.2"
chrono = "0.4"
async-trait = "0.1"
once_cell = "1.10"
bcrypt = "0.12"
validator = { version = "0.14", features = ["derive"] }
bytes = "1.1"
futures = "0.3"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = { version = "2.0", default-features = true, features = ["bson-uuid-0_8", "bson-chrono-0_4"] }
bson = "2.0"
# find replacment or fork?
jsonwebtoken = "8"